--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,7 @@ header {
 .home {
 	max-width: 400px;
 }
-.my-services {
-	max-width: 400px;
-}
+
 .nav {
 	position: fixed;
 	background: var(--clr-dark);
@@ -336,7 +334,7 @@ header {
 .my-services {
 	background-color: var(--clr-dark);;
 	background-image: url(../img/rio16.jpeg);
-	background-size: max;
+	background-size: cover;
 	background-blend-mode: multiply;
 	color: var(--clr-light);
 	text-align: center;
