--- a/css/style.css
+++ b/css/style.css
@@ -133,10 +133,7 @@ h3 { font-size: var(--fs-h3) }
 	margin-bottom: 1em;
 }
 
-
 /* Header */
-nav { display: none; }
-
 
 .header {
 	display: flex;
@@ -145,55 +142,44 @@ nav { display: none; }
 }
 
 .logo {
-	max-width: 150px;
+	max-width: 120px;
 }
-
 
 .nav {
 	position: fixed;
 	background: var(--clr-dark);
-	color: var(--clr-dark);
+	color: var(--clr-light);
 	top: 0;
 	bottom: 0;
+	left: 0;
 	right: 0;
 	z-index: 100;
-	max-height: 15em;
 
-	transform: translateY(-100%);
+
+	transform: translateX(100%);
 	transition: transform 250ms cubic-bezier(.5,0,.5,1);
-}
-
-.nav__container {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-    background: var(--clr-accent);
-    padding: 1em;
-    border-radius: 5px; 
-    box-shadow: var(--bs);
 }
 
 .nav__list {
 	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-
-.nav__item {
-    margin: 0 0;
+	display: flex;
+	height: 100%;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	margin:0;
+	padding:0;
 }
 
 .nav__link {
     color: inherit;
     font-weight: var(--fw-bold);
-    font-size: 1em;
+    font-size: var(--fs-h2);
     text-decoration: none;
-    display: block;
-    padding: 0.2em 0;
 }
 
 .nav__link:hover {
-	color: var(--clr-light);
+	color: var(--clr-accent);
 }
 
 .nav-toggle {
@@ -208,8 +194,7 @@ nav { display: none; }
 }
 
 .nav-open .nav {
-	height: 0;
-	transform: translateY(0);
+	transform: translateX(0);
 }
 
 .nav-open .nav-toggle {
@@ -245,28 +230,23 @@ nav { display: none; }
 
 .hamburger::before,
 .hamburger::after {
-	content: '';
+	content:'';
 	position: absolute;
 	left: 0;
 	right: 0;
 }
 
-.hamburger::before {
-	top: 6px;
-}
-
-.hamburger::after {
-	bottom: 6px;
-}
-
+.hamburger::before { top:6px; }
+.hamburger::after {bottom: 6px; }
 
 .nav-open .hamburger,
 .nav-open .hamburger::before,
 .nav-open .hamburger::after {
-    background: var(--clr-dark); 
-    height: 1.5px; 
-	top: -0.5em;
-	right: -1em;
+    background: var(--clr-light); 
+    width: 1.2em; 
+    height: 1.5px;
+	
+	
 }
 
 .nav-open .hamburger::before {
@@ -274,7 +254,7 @@ nav { display: none; }
 }
 
 .nav-open .hamburger::after {
-    bottom: 6px; 
+    bottom: 6px;
 }
 
 .nav-open .hamburger:hover .line {
